added group members and checklist

--- a/Groupathon/app/src/main/AndroidManifest.xml
+++ b/Groupathon/app/src/main/AndroidManifest.xml
@@ -23,8 +23,10 @@
         <activity android:name=".AccountActivity.SignupActivity" />
         <activity android:name=".AccountActivity.ResetPasswordActivity" />
         <activity android:name=".create_group" />
-        <activity android:name=".Group_details" />
         <activity android:name=".AccountActivity.SettingActivity" />
+        <activity android:name=".Group_details"/>
+        <activity android:name=".Group_members"/>
+        <activity android:name=".Group_itemchecklist"/>
     </application>
 
 </manifest>
